tests/reference/asr-maskl_incorrect_bit_size-62a84b0.stderr
semantic error:  first argument of `maskl` must be less than or equal to the BIT_SIZE of INTEGER(KIND=4)
 --> tests/errors/maskl_incorrect_bit_size.f90:2:12
  |
2 |    print*, maskl(63)
  |            ^^^^^^^^^ 
